src/styles/layout/_app-look.scss
@use "../abstracts/mixins";

.app-look {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: linear-gradient(to top left, #49be98, rgba(0, 0, 0, 0), #c0bb57),
    linear-gradient(to top right, #5cd1c9, rgba(255, 153, 150, 0), #202ec2)
      #678b97;
  padding-top: 10em;
  padding-bottom: 10em;
  border-radius: 10px;
  margin-top: 15em;
  overflow: hidden;
  &-text {
    width: 40%;

    & .app-look-header-focus {
      margin: 0.5em 0 0.5em;
    }
  }

  &-illustrations {
    position: relative;

    width: 50%;
    height: 100%;

    & .app-look-sizer {
      opacity: 0;
    }

    & .app-look-charge {
      position: absolute;
      top: 0;
      right: 0px;
      transform: translate(20%, -5px) rotateZ(10deg);
    }
    & .app-look-map {
      position: absolute;
      top: 0;
      right: 0px;
      transform: translate(-20%, -5px) rotateZ(-10deg);
    }
  }

  // @media screen and (max-width: 1320px) {
  //   flex-direction: column;
  // }

  @include mixins.mobile {
    flex-direction: column;
    margin-top: 5em;

    &-text {
      width: 100%;
      text-align: center;
    }

    &-illustrations {
      position: relative;

      width: 100%;
      height: 110%;

      & .app-look-sizer {
        opacity: 0;
      }

      & .app-look-charge {
        position: absolute;
        top: 0;
        right: 0px;
        transform: translate(-20%, 5px) rotateZ(-10deg);
      }
      & .app-look-map {
        position: absolute;
        top: 0;
        right: 0px;
        transform: translate(20%, -5px) rotateZ(10deg);
      }
    }
  }
}

